[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/Dash.gd" type="Script" id=1]

[node name="Dash" type="Node2D"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
